Implementacion de las imagenes

--- a/Tic_Tic_Toe_Ultimate/Tic_Tic_Toe_Ultimate.vcxproj
+++ b/Tic_Tic_Toe_Ultimate/Tic_Tic_Toe_Ultimate.vcxproj
@@ -147,7 +147,7 @@
   <ItemGroup>
     <ClCompile Include="Juego.cpp" />
     <ClCompile Include="MetaGato.cpp" />
-    <ClCompile Include="Tic_Tic_Toe_Ultimate.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Utilidades_MetaGato.cpp" />
   </ItemGroup>
   <ItemGroup>
